# imcon

./: README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
docs/: _config.yml  index.md
imcon/: __init__.py  __main__.py  ipython_config.py  optimize.py
support/: start_imcon.py
