[project]
dependencies = ["azcam"]
name = "imcon"
version = "26.0.0"
description = "imcon package for controlling imaging systems"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["imaging", "astronomy", "cameras"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser.az@gmail.com" }]
[project.urls]
Documentation = "https://mplesser.github.io/imcon/"
Repository = "https://github.com/mplesser/imcon/"

[project.scripts]
imcon = "imcon.__main__:main"

[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"
